chore: Update CI to publish to npmjs.org with public access using a new token secret.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org/
       - run: npm install
-      - run: tsc && npm publish
+      - run: tsc && npm publish --access public
     env:
-      NODE_AUTH_TOKEN: ${{secrets.PUBLISH_SECRET}}
+      NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
